--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <H1 style="color: red; font-size: 30px;">Simple Web App</H1>
 <p>Hello, I am the Best, This is a simple webapp.It's not that beautiful on the outside but it's beautiful on th inside
 </p>	
-<p style="border: 30px; font-size: 30px;">  Hi, Hello World!</p>
+<p style="border: 30px; font-size: 30px;">  Hi, Naved-Hello World!</p>
 <p> vanilla icecream is better than all other icecream</p>
 </html>
